# Todolistenverwaltung_openAPI.yaml
@@ -1,120 +1,220 @@
-import uuid 
-
-from flask import Flask, request, jsonify, abort
-
-
-# initialize Flask server
-app = Flask(__name__)
-
-# create unique id for lists, entries
-todo_list_1_id = '1318d3d1-d979-47e1-a225-dab1751dbe75'
-todo_list_2_id = '3062dc25-6b80-4315-bb1d-a7c86b014c65'
-todo_list_3_id = '44b02e00-03bc-451d-8d01-0c67ea866fee'
-todo_1_id = str(uuid.uuid4())
-todo_2_id = str(uuid.uuid4())
-todo_3_id = str(uuid.uuid4())
-todo_4_id = str(uuid.uuid4())
-
-# define internal data structures with example data
-todo_lists = [
-    {'id': todo_list_1_id, 'name': 'Einkaufsliste'},
-    {'id': todo_list_2_id, 'name': 'Arbeit'},
-    {'id': todo_list_3_id, 'name': 'Privat'},
-]
-todos = [
-    {'id': todo_1_id, 'name': 'Milch', 'description': '', 'list': todo_list_1_id},
-    {'id': todo_2_id, 'name': 'Arbeitsblätter ausdrucken', 'description': '', 'list': todo_list_2_id},
-    {'id': todo_3_id, 'name': 'Kinokarten kaufen', 'description': '', 'list': todo_list_3_id},
-    {'id': todo_4_id, 'name': 'Eier', 'description': '', 'list': todo_list_1_id},
-]
-
-# add some headers to allow cross origin access to the API on this server, necessary for using preview in Swagger Editor!
-@app.after_request
-def apply_cors_header(response):
-    response.headers['Access-Control-Allow-Origin'] = '*'
-    response.headers['Access-Control-Allow-Methods'] = 'GET,POST,DELETE,PATCH'
-    response.headers['Access-Control-Allow-Headers'] = 'Content-Type'
-    return response
-
-# define endpoint for getting and deleting existing todo lists
-@app.route('/list/<list_id>', methods=['GET', 'DELETE', 'PATCH'])
-def handle_list(list_id):
-    # find todo list depending on given list id
-    list_item = None
-    for l in todo_lists:
-        if l['id'] == list_id:
-            list_item = l
-            break
-    # if the given list id is invalid, return status code 404
-    if not list_item:
-        abort(404)
-    if request.method == 'GET':
-        # find all todo entries for the todo list with the given id
-        print('Returning todo list...')
-        return jsonify([i for i in todos if i['list'] == list_id])
-    elif request.method == 'DELETE':
-        # delete list with given id
-        print('Deleting todo list...')
-        todo_lists.remove(list_item)
-        return '', 200
-    elif request.method == 'PATCH':
-        list_item['name'] = request.json['name']
-        return '',200
-
-
-# define endpoint for adding a new list
-@app.route('/list', methods=['POST'])
-def add_new_list():
-    # make JSON from POST data (even if content type is not set correctly)
-    new_list = request.get_json(force=True)
-    print('Got new list to be added: {}'.format(new_list))
-    # create id for new list, save it and return the list with id
-    new_list['id'] = uuid.uuid4()
-    todo_lists.append(new_list)
-    return jsonify(new_list), 200
-
-
-# define endpoint for getting all lists
-@app.route('/lists', methods=['GET'])
-def get_all_lists():
-    return jsonify(todo_lists)
-
-# define endpoint for patching and deleting items in a list
-@app.route('/list/<list_id>/item/<item_id>', methods=['PATCH', 'DELETE'])
-def handle_list_item(list_id, item_id):
-    item = None
-    for todo in todos:
-        if(todo['id'] == item_id and todo['list'] == list_id):
-            item = todo
-            
-    if request.method == 'PATCH':
-        todo['name'] = request.json['name']
-        todo['description'] = request.json['beschreibung']
-        return 'item patched',200
-    elif request.method == 'DELETE':
-        todos.remove(todo);
-        return 'item deleted',200
-    return 'list or item not found', 500
-
-#define endpoint for adding an item into a list
-@app.route('/list/<list_id>/item', methods=['POST'])
-def add_item_to_list(list_id):
-    list = None
-    for l in todo_lists:
-        if(l['id'] == list_id):
-            newItem = request.json
-            newItem['list'] = l['id']
-            newItem['id'] = str(uuid.uuid4)
-
-    if(list == None):
-        return 'list not found', 404
-
-    if(newItem == None):
-        return 'item couldnt be created',500
-
-    return 'item created',201
-
-if __name__ == '__main__':
-    # start Flask server
-    app.debug = True
-    app.run(host='0.0.0.0', port=5000)
+openapi: 3.0.1
+info:
+  title: Todo-Listen-Verwaltung
+  description: ""
+  contact:
+    email: wichmann@bbs-os-brinkstr.de
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
+  version: 0.1.0
+servers:
+- url: http://127.0.0.1:5000/
+tags:
+- name: Listenverwaltung
+paths:
+  /list/{list_id}:
+    get:
+      tags:
+      - Listenverwaltung
+      summary: Get all items from list
+      operationId: getList
+      parameters:
+      - name: list_id
+        in: path
+        description: list id
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: List item returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TodoEntry'
+        404:
+          description: Invalid list id
+          content: {}
+    delete:
+      tags:
+      - Listenverwaltung
+      summary: Delete a list
+      operationId: deleteList
+      parameters:
+      - name: list_id
+        in: path
+        description: list id
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: List was deleted
+          content: {}
+        404:
+          description: Invalid list id
+          content: {}
+  /list:
+    post:
+      tags:
+      - Listenverwaltung
+      summary: Add new list
+      operationId: addList
+      requestBody:
+        description: list object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/TodoList'
+        required: true
+      responses:
+        200:
+          description: List added
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TodoList'
+        500:
+          description: List could not be added
+          content: {}
+      x-codegen-request-body-name: body
+  /list/{list_id}/item:
+    post:
+      tags:
+      - Listenelementverwaltung
+      summary: Add new list item
+      operationId: addListItem
+      parameters:
+      - name: list_id
+        in: path
+        description: list id
+        required: true
+        schema:
+          type: string
+      requestBody:
+        description: list item object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewTodoEntry'
+      responses:
+        200:
+          description: List item returned
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TodoEntry'
+        404:
+          description: Invalid list id
+          content: {}
+        500:
+          description: Item could not be added
+          content: {}
+      x-codegen-request-body-name: body
+  /list/{list_id}/item/{item_id}:
+    parameters:
+    - name: list_id
+      in: path
+      description: list id
+      required: true
+      schema:
+        type: string
+    - name: item_id
+      in: path
+      description: item id
+      required: true
+      schema:
+        type: string
+    patch:
+      tags:
+      - Listenelementverwaltung
+      summary: Edit list item
+      operationId: editListItem
+      requestBody:
+        description: list item object
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewTodoEntry'
+      responses:
+        200:
+          description: List item returned
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/TodoEntry'
+        400:
+          description: Invalid parameters
+          content: {}
+        404:
+          description: Invalid list id
+          content: {}
+        500:
+          description: Item could not be added
+          content: {}
+    delete:
+      tags:
+      - Listenelementverwaltung
+      summary: Delete a list item
+      operationId: deleteListItem
+      responses:
+        200:
+          description: List item was deleted
+          content: {}
+        404:
+          description: Invalid list item id
+          content: {}
+        500:
+          description: Item could not be deleted
+          content: {}
+  /lists:
+    get:
+      tags:
+      - Listenverwaltung
+      summary: Get all lists
+      operationId: getLists
+      responses:
+        200:
+          description: Lists returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/TodoList'
+components:
+  schemas:
+    TodoList:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+    NewTodoEntry:
+      type: object
+      properties:
+        name:
+          type: string
+        beschreibung:
+          type: string
+    TodoEntry:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        description:
+          type: string
+        user_id:
+          type: string
+          format: uuid
+        list_id:
+          type: string
+          format: uuid
