# server.py
@@ -10,10 +10,10 @@ app = Flask(__name__)
 todo_list_1_id = '1318d3d1-d979-47e1-a225-dab1751dbe75'
 todo_list_2_id = '3062dc25-6b80-4315-bb1d-a7c86b014c65'
 todo_list_3_id = '44b02e00-03bc-451d-8d01-0c67ea866fee'
-todo_1_id = '5a58c4d9-19a2-4500-acd4-7ec42d2f3989'
-todo_2_id = 'f02b630e-692e-4b48-bd1b-d2d84f08b67e'
-todo_3_id = '7171116c-7cf6-4ec4-a5df-b736fe28e371'
-todo_4_id = uuid.uuid4()
+todo_1_id = str(uuid.uuid4())
+todo_2_id = str(uuid.uuid4())
+todo_3_id = str(uuid.uuid4())
+todo_4_id = str(uuid.uuid4())
 
 # define internal data structures with example data
 todo_lists = [
@@ -25,7 +25,7 @@ todos = [
     {'id': todo_1_id, 'name': 'Milch', 'description': '', 'list': todo_list_1_id},
     {'id': todo_2_id, 'name': 'Arbeitsblätter ausdrucken', 'description': '', 'list': todo_list_2_id},
     {'id': todo_3_id, 'name': 'Kinokarten kaufen', 'description': '', 'list': todo_list_3_id},
-    {'id': todo_3_id, 'name': 'Eier', 'description': '', 'list': todo_list_1_id},
+    {'id': todo_4_id, 'name': 'Eier', 'description': '', 'list': todo_list_1_id},
 ]
 
 # add some headers to allow cross origin access to the API on this server, necessary for using preview in Swagger Editor!
@@ -37,7 +37,7 @@ def apply_cors_header(response):
     return response
 
 # define endpoint for getting and deleting existing todo lists
-@app.route('/list/<list_id>', methods=['GET', 'DELETE'])
+@app.route('/list/<list_id>', methods=['GET', 'DELETE', 'PATCH'])
 def handle_list(list_id):
     # find todo list depending on given list id
     list_item = None
@@ -57,6 +57,9 @@ def handle_list(list_id):
         print('Deleting todo list...')
         todo_lists.remove(list_item)
         return '', 200
+    elif request.method == 'PATCH':
+        list_item['name'] = request.json['name']
+        return '',200
 
 
 # define endpoint for adding a new list
@@ -76,6 +79,40 @@ def add_new_list():
 def get_all_lists():
     return jsonify(todo_lists)
 
+# define endpoint for patching and deleting items in a list
+@app.route('/list/<list_id>/item/<item_id>', methods=['PATCH', 'DELETE'])
+def handle_list_item(list_id, item_id):
+    item = None
+    for todo in todos:
+        if(todo['id'] == item_id and todo['list'] == list_id):
+            item = todo
+            
+    if request.method == 'PATCH':
+        todo['name'] = request.json['name']
+        todo['description'] = request.json['beschreibung']
+        return 'item patched',200
+    elif request.method == 'DELETE':
+        todos.remove(todo);
+        return 'item deleted',200
+    return 'list or item not found', 500
+
+#define endpoint for adding an item into a list
+@app.route('/list/<list_id>/item', methods=['POST'])
+def add_item_to_list(list_id):
+    list = None
+    for l in todo_lists:
+        if(l['id'] == list_id):
+            newItem = request.json
+            newItem['list'] = l['id']
+            newItem['id'] = str(uuid.uuid4)
+
+    if(list == None):
+        return 'list not found', 404
+
+    if(newItem == None):
+        return 'item couldnt be created',500
+
+    return 'item created',201
 
 if __name__ == '__main__':
     # start Flask server
